--- a/bootstrap/templates/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml.j2
+++ b/bootstrap/templates/kubernetes/apps/kube-system/cilium/app/helmrelease.yaml.j2
@@ -25,10 +25,19 @@ spec:
       name: cilium-helm-values
   values:
     #% if bootstrap_cloudflare.enabled %#
+    ingressController:
+      enabled: true
+      default: false
+      defaultSecretNamespace: network
+      defaultSecretName: stiforr-com-production-tls
+      loadbalancerMode: shared
+      service:
+        annotations:
+          lbipam.cilium.io/ips: 192.168.1.205
     hubble:
       enabled: true
-      enableOpenMetrics: true
       metrics:
+        enableOpenMetrics: true
         enabled:
           - dns:query;labelsContext=source_namespace,destination_namespace
           - drop
